--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
   },
   "require": {
     "php": "^7.2.5|^8.0",
-    "illuminate/routing": "*",
-    "illuminate/support": "*",
+    "illuminate/routing": "^9.0.0",
+    "illuminate/support": "^9.0.0",
     "league/glide-laravel": "^1.0.0"
   },
   "require-dev": {
