--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,9 @@
     }
   },
   "require": {
-    "php": "^7.2.5|^8.0",
-    "illuminate/routing": "^9.0.0",
-    "illuminate/support": "^9.0.0",
+    "php": "^8.1",
+    "illuminate/routing": "^10.0.0",
+    "illuminate/support": "^10.0.0",
     "league/glide-laravel": "^1.0.0"
   },
   "require-dev": {
